--- a/001/test.html
+++ b/001/test.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>福利推荐</title>
+    <style type="test/css">
+        body{
+            background image:url(./images/0.jpg);
+        }
+    </style>
 
 </head>
 <body>
