--- a/001/test.html
+++ b/001/test.html
@@ -5,7 +5,7 @@
     <title>福利推荐</title>
     <style type="test/css">
         body{
-            background image:url(./images/0.jpg);
+            background-image:url(./images/0.jpg);
         }
     </style>
 
