--- a/001/test.html
+++ b/001/test.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>福利推荐</title>
-    <style type="test/css">
+        <style type="test/css">
         body{
-            background-image:url(./images/0.jpg);
+            background-image: url(./images/0.jpg);
+            background-size: 100% 100%;
+            height: 100%;
+        }
+        html{
+            height: 100%;
         }
     </style>
-
 </head>
 <body>
 <img src="./images/0.jpg"/>
