--- a/001/test.html
+++ b/001/test.html
@@ -12,6 +12,14 @@
         html{
             height: 100%;
         }
+        @keyframes myfist {
+            from {background: red}
+            to {background: green}
+            
+        }
+        h1{
+            animation: myfirst 2s infinite;
+        }
     </style>
 </head>
 <body>
