--- a/001/test.html
+++ b/001/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>福利推荐</title>
-        <style type="test/css">
+        <style type="text/css">
         body{
             background-image: url(./images/0.jpg);
             background-size: 100% 100%;
@@ -12,12 +12,12 @@
         html{
             height: 100%;
         }
-        @keyframes myfist {
-            from {background: red}
-            to {background: green}
+         @keyframes myfist {
+            from {opacity: 0}
+            to {opacity: 100}
             
         }
-        h1{
+        h1,p{
             animation: myfirst 2s infinite;
         }
     </style>
