--- a/001/test.html
+++ b/001/test.html
@@ -2,16 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>福利推荐</title>
+    <title>男人最爱</title>
         <style type="text/css">
-        body{
-            background-image: url(./images/0.jpg);
-            background-size: 100% 100%;
-            height: 100%;
-        }
-        html{
-            height: 100%;
-        }
+      
          @keyframes myfist {
             from {opacity: 0}
             to {opacity: 100}
