--- a/001/test.html
+++ b/001/test.html
@@ -8,10 +8,18 @@
          @keyframes myfist {
             from {opacity: 0}
             to {opacity: 100}
+
             
         }
+         p{
+             font-size: 75px;
+         }
+         h1{
+             font-size: 100px;
+         }
         h1,p{
             animation: myfirst 2s infinite;
+
         }
     </style>
 </head>
