--- a/001/test.html
+++ b/001/test.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <title>男人最爱</title>
         <style type="text/css">
-      
-         @keyframes myfist {
-            from {opacity: 0}
-            to {opacity: 100}
 
-            
-        }
+            @keyframes myfirst
+            {
+                from {background: red;}
+                to {background: yellow;}
+            }
+             h1{
+                 animation: myfirst 2s infinite;
+
+             }
          p{
              font-size: 75px;
          }
          h1{
              font-size: 100px;
          }
-        h1,p{
-            animation: myfirst 2s infinite;
 
-        }
     </style>
 </head>
 <body>
