--- a/001/test.html
+++ b/001/test.html
@@ -14,10 +14,18 @@
                  animation: myfirst 2s infinite;
 
              }
+             @keyframes mysecond {
+                 from {background: green;}
+                 to {background: purple;}
+             }
+            h2{
+                animation: mysecond 0.5s infinite;
+
+            }
          p{
              font-size: 75px;
          }
-         h1{
+         h1,h2{
              font-size: 100px;
          }
 
@@ -28,7 +36,7 @@
 <h1>福利推荐</h1>
 <p>更多福利资源</p>
 <p>请关注微信公众号</p>
-<p>梦梦影视888</p>
+<h2>梦梦影视888</h2>
 <img src="./images/1.jpg"/>
 </body>
 </html>
