--- a/001/test.html
+++ b/001/test.html
@@ -8,7 +8,7 @@
             @keyframes myfirst
             {
                 from {background: red;}
-                to {background: yellow;}
+                to {background: blue;}
             }
              h1{
                  animation: myfirst 2s infinite;
@@ -16,7 +16,7 @@
              }
              @keyframes mysecond {
                  from {background: green;}
-                 to {background: purple;}
+                 to {background: gold;}
              }
             h2{
                 animation: mysecond 0.5s infinite;
